--- a/public/styles.css
+++ b/public/styles.css
@@ -40,7 +40,10 @@ header > h1 {
 }
 
 .attempt {
-    padding: 10px;
+    padding: 1em;
+    background-color: #FFFFFF;
+    border-radius: 1em;
+    margin: 1em;
 }
 
 .attempt > h3 {
